@@ -14,6 +14,8 @@ git-annex (0.04) UNRELEASED; urgency=low
   * Annexed file contents are now made unwritable and put in unwriteable
     directories, to avoid them accidentially being removed or modified.
     (Thanks Josh Triplett for the idea.)
+  * Avoid using runghc to run test suite as it is not available on all
+    architectures. Closes: #603006
 
  -- Joey Hess <joeyh@debian.org>  Mon, 08 Nov 2010 12:36:39 -0400
 
